@startuml
class Neuron{
    + unsigned int id
    + std::vector<Neuron*> in,out
    + Neuron* begin()
    + Neuron* end()
    
}
class SomeNeurons<typename Neuron>{
    + void connect_to(T& other)
    
}
class NeuronLayer{
    + friend std::iostrean& operator<<(iostream&,NeuronLayer)
    + NeuronLayer(int count)

}
class vector<Neuron>{
    + Neuron* begin();
    + Neuron* end();
}
NeuronLayer--|>vector:获取begin和end方法
NeuronLayer--|>SomeNeurons:传递begin和end方法
Neuron--|>SomeNeurons:继承获取begin和end
@enduml